--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -2,15 +2,20 @@
   @font-face {
     font-family: $font_name;
     font-display: swap;
-    src: url("../fonts/#{$file_name}.woff") format("woff"),
-      url("../fonts/#{$file_name}.woff2") format("woff2");
+    src: url("../fonts/#{$file_name}.woff") format("woff"), url("../fonts/#{$file_name}.woff2") format("woff2");
     font-weight: #{$weight};
     font-style: #{$style};
   }
 }
+/* variables */
+$primary-color: #377dff;
+$transition: 0.2s;
+
+/* /variables */
 
 @import "fonts";
 @import "normalize";
+@import "header";
 
 *,
 *::before,
@@ -20,4 +25,28 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
+}
+
+body {
+  max-width: 1440px;
+  font-family: "Poppins", sans-serif;
+  background-color: #e5e5e5;
+  margin: 0 auto;
+}
+
+.container {
+  max-width: 1170px;
+  margin: 0 auto;
+  padding: 0 15px;
+
+  @media (max-width: 1280px) {
+    max-width: 1070px;
+  }
+  @media (max-width: 1140px) {
+    max-width: 992px;
+  }
+}
+
+.color-text {
+  color: $primary-color;
 }
