--- a/WebTech/css/style.css
+++ b/WebTech/css/style.css
@@ -1,3 +1,7 @@
+/* variables */
+
+/* /variables */
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
@@ -382,6 +386,155 @@ template {
   display: none;
 }
 
+.header {
+  height: 100%;
+}
+
+.header__fullscreen-body {
+  min-height: 100vh;
+}
+
+.header__socials {
+  background-color: #141d28;
+  padding: 20px 0;
+}
+
+.header__socials-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.header__phone {
+  font-size: 15px;
+  color: #ffffff;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.header__socials-nav {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 150px;
+          flex: 0 1 150px;
+}
+
+.header__socials-nav-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
+.header__socials-nav-link {
+  font-size: 15px;
+  color: #ffffff;
+  padding: 5px;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+}
+
+.header__logo-nav {
+  background-color: #0c1117;
+  padding: 22px 0;
+}
+
+.header__logo-nav-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+
+.header__logo-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 140px;
+}
+
+.header__logo {
+  line-height: 0;
+}
+
+.header__company-name {
+  font-size: 30px;
+  line-height: 30px;
+  margin-left: 15px;
+}
+
+.header__nav {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
+.header__nav-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.header__nav-link {
+  color: #ffffff;
+  font-size: 15px;
+  line-height: 15px;
+  padding: 5px 10px;
+  position: relative;
+  -webkit-transition: 0.2s;
+  -o-transition: 0.2s;
+  transition: 0.2s;
+  z-index: 1;
+}
+
+.header__nav-link::after {
+  content: "";
+  position: absolute;
+  width: calc(100% + 2px);
+  height: calc(100% + 2px);
+  left: -1px;
+  right: 0;
+  top: -1px;
+  bottom: 0;
+  background-color: #377dff;
+  border-radius: 25px;
+  z-index: -1;
+  -webkit-transform: scale(0);
+      -ms-transform: scale(0);
+          transform: scale(0);
+  -webkit-transition: 0.2s ease-in;
+  -o-transition: 0.2s ease-in;
+  transition: 0.2s ease-in;
+}
+
+.header__burger-btn {
+  display: none;
+}
+
 *,
 *::before,
 *::after {
@@ -391,4 +544,216 @@ template {
           box-sizing: border-box;
   list-style: none;
   text-decoration: none;
+}
+
+body {
+  max-width: 1440px;
+  font-family: "Poppins", sans-serif;
+  background-color: #e5e5e5;
+  margin: 0 auto;
+}
+
+.container {
+  max-width: 1170px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.color-text {
+  color: #377dff;
+}
+
+@media (min-width: 993px) {
+  .header__phone:hover,
+  .header__phone:focus {
+    color: #377dff;
+  }
+
+  .header__socials-nav-link:hover,
+  .header__socials-nav-link:focus {
+    color: #377dff;
+  }
+
+  .header__nav-link:hover::after,
+  .header__nav-link:focus::after {
+    -webkit-transform: scale(1);
+        -ms-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+@media (max-width: 1280px) {
+  .container {
+    max-width: 1070px;
+  }
+}
+
+@media (max-width: 1140px) {
+  .container {
+    max-width: 992px;
+  }
+}
+
+@media (max-width: 992px) {
+  .header__socials {
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    padding: 13px 0;
+  }
+
+  .header__logo-nav-wrapper {
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: fixed;
+    width: 100%;
+    top: 44px;
+    left: 0;
+    z-index: 2;
+    padding: 15px 0;
+  }
+
+  .header__logo-nav-wrapper::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: #0c1117;
+    border-bottom: 2px solid #377dff;
+    z-index: -1;
+  }
+
+  .header__logo-wrapper {
+    margin: 0 0 0 15px;
+  }
+
+  .header__nav {
+    position: absolute;
+    display: block;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: -105vw;
+    text-align: center;
+    margin: 0;
+    background-color: rgba(12, 17, 23, 0.98);
+    overflow: auto;
+    -webkit-transition: 0.2s ease-in;
+    -o-transition: 0.2s ease-in;
+    transition: 0.2s ease-in;
+    z-index: -1;
+  }
+
+  .header__nav.active {
+    left: 0;
+  }
+
+  .header__nav-list {
+    display: block;
+    width: 95vw;
+    margin: 0 auto;
+  }
+
+  .header__nav-item:first-child {
+    margin-top: 102px;
+  }
+
+  .header__nav-item:not(:first-child) {
+    margin: 40px 0 0;
+  }
+
+  .header__nav-link {
+    font-size: 24px;
+    display: inline-block;
+  }
+
+  .header__burger-btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: relative;
+    width: 30px;
+    height: 30px;
+    margin-right: 20px;
+    background-color: transparent;
+    border: 2px solid #585858;
+    border-radius: 4px;
+    cursor: pointer;
+    z-index: 3;
+  }
+
+  .header__burger-btn .burger-btn-line {
+    display: block;
+    width: 20px;
+    height: 2px;
+    background-color: #585858;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+  }
+
+  .header__burger-btn:before,
+  .header__burger-btn:after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+            transform: translate(-50%, -50%);
+    width: 20px;
+    height: 2px;
+    background-color: #585858;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+  }
+
+  .header__burger-btn:before {
+    top: 6px;
+  }
+
+  .header__burger-btn:after {
+    bottom: 4px;
+  }
+
+  .header__burger-btn.active {
+    border-color: #377dff;
+  }
+
+  .header__burger-btn.active span {
+    -webkit-transform: scale(0);
+        -ms-transform: scale(0);
+            transform: scale(0);
+  }
+
+  .header__burger-btn.active:before {
+    -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+            transform: rotate(45deg);
+    left: 3px;
+    top: 12px;
+    background-color: #377dff;
+  }
+
+  .header__burger-btn.active:after {
+    -webkit-transform: rotate(-45deg);
+        -ms-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+    left: 3px;
+    bottom: 12px;
+    background-color: #377dff;
+  }
 }
