--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -1,9 +1,39 @@
 .header {
     height: 100%;
+    position: relative;
+
+    &::after {
+        content: "";
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        width: 100%;
+        height: 70px;
+        border: 70px solid transparent;
+        border-bottom: 0px solid transparent;
+        border-left: 0px solid transparent;
+        border-right: 1440px solid #ffffff;
+        z-index: 1;
+    }
 
     // .header__fullscreen-body
     &__fullscreen-body {
         min-height: 100vh;
+        background: center / cover no-repeat url("../img/hero-bg.jpg");
+        position: relative;
+        color: #ffffff;
+        z-index: 1;
+
+        &::after {
+            content: "";
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(18, 27, 38, 0.73);
+            z-index: -1;
+        }
     }
 
     // .header__socials
@@ -11,12 +41,10 @@
     &__socials {
         background-color: #141d28;
         padding: 20px 0;
+        position: relative;
+        z-index: 1;
 
         @media (max-width: 992px) {
-            position: fixed;
-            width: 100%;
-            top: 0;
-            left: 0;
             padding: 13px 0;
         }
     }
@@ -40,11 +68,18 @@
                 color: $primary-color;
             }
         }
+        @media (max-width: 992px) {
+            margin-left: 15px;
+        }
     }
 
     // .header__socials-nav
     &__socials-nav {
         flex: 0 1 150px;
+
+        @media (max-width: 992px) {
+            margin-right: 15px;
+        }
     }
 
     // .header__socials-nav-list
@@ -77,23 +112,10 @@
     &__logo-nav {
         background-color: #0c1117;
         padding: 22px 0;
-    }
-
-    // .header__logo-nav-wrapper
-    &__logo-nav-wrapper {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
         position: relative;
+        z-index: 2;
 
         @media (max-width: 992px) {
-            justify-content: space-between;
-            align-items: center;
-            position: fixed;
-            width: 100%;
-            top: 44px;
-            left: 0;
-            z-index: 2;
             padding: 15px 0;
 
             &::after {
@@ -104,10 +126,24 @@
                 top: 0;
                 left: 0;
                 background-color: #0c1117;
-                border-bottom: 2px solid $primary-color;
                 z-index: -1;
             }
         }
+
+        &.sticky {
+            position: fixed;
+            top: 0;
+            width: 100%;
+            max-width: 1440px;
+            margin: 0 auto;
+        }
+    }
+
+    // .header__logo-nav-wrapper
+    &__logo-nav-wrapper {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
     }
 
     // .header__logo-wrapper
@@ -115,7 +151,28 @@
         display: flex;
         align-items: center;
         margin-right: 140px;
+        position: relative;
 
+        &::after {
+            content: "";
+            position: absolute;
+            left: 0;
+            bottom: -5px;
+            width: 100%;
+            height: 2px;
+            background-color: $primary-color;
+            transform: scaleX(0);
+            transition: $transition ease-in;
+        }
+
+        @media (min-width: 993px) {
+            &:hover,
+            &:focus {
+                &::after {
+                    transform: scaleX(1);
+                }
+            }
+        }
         @media (max-width: 992px) {
             margin: 0 0 0 15px;
         }
@@ -295,37 +352,111 @@
 
     // .header__hero
     &__hero {
+        color: #ffffff;
+        position: relative;
     }
 
-    // .header__hero-title-wrapper
+    // .header__hero-content-wrapper
+    &__hero-content-wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        min-height: 86vh;
+    }
+
+    //.header__hero-title-wrapper
     &__hero-title-wrapper {
+        display: flex;
+        align-items: center;
     }
 
     // .header__hero-title-number
     &__hero-title-number {
+        font-size: calc(40px + 100 * ((100vw - 320px) / (1440 - 320)));
+        line-height: 100%;
+        color: rgba(255, 255, 255, 0.13);
+        padding-right: 25px;
+        border-right: 3px solid $primary-color;
     }
 
     // .header__hero-title
     &__hero-title {
+        margin-left: 25px;
     }
 
     // .header__hero-text
     &__hero-text {
+        display: block;
+        max-width: 600px;
+        line-height: 150%;
+        margin-top: 25px;
     }
 
     // .header__hero-btn-wrapper
     &__hero-btn-wrapper {
+        display: flex;
+        width: 100%;
+        position: relative;
+        margin-top: 60px;
+
+        &:first-child {
+            margin-right: 15px;
+        }
     }
 
     // .header__hero-btn
     &__hero-btn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-grow: 1;
+        color: #ffffff;
+        max-width: 158px;
+        padding: 17px 0;
+        background-color: transparent;
+        border: 2px solid $primary-color;
+        border-radius: 30px;
+        transition: $transition;
+        position: relative;
+        z-index: 1;
+
+        &:first-child {
+            margin-right: 15px;
+        }
+
+        @media (min-width: 993px) {
+            &:hover,
+            &:focus {
+                &::after {
+                    transform: scale(1);
+                }
+            }
+        }
+
+        &::after {
+            content: "";
+            position: absolute;
+            width: calc(100% + 2px);
+            height: calc(100% + 2px);
+            left: -1px;
+            top: -1px;
+            background-color: $primary-color;
+            border-radius: 30px;
+            z-index: -1;
+            transform: scale(0);
+            transition: $transition ease-in;
+        }
     }
 
     // .header__hero-image-wrapper
     &__hero-image-wrapper {
+        position: absolute;
+        right: 0;
+        bottom: 0;
     }
 
     // .header__hero-image
     &__hero-image {
+        align-self: flex-end;
     }
 }
