--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -59,7 +59,7 @@ body {
 
 h1 {
   font-family: "Montserrat", sans-serif;
-  font-size: calc(30px + 20 * ((100vw - 320px) / (1440 - 320)));
+  font-size: 50px /* calc(25px + 18 * ((100vw - 320px) / (1440 - 320))) */;
   line-height: 150%;
   font-weight: 400;
   margin: 0;
