--- a/WebTech/css/style.css
+++ b/WebTech/css/style.css
@@ -388,21 +388,6 @@ template {
 
 .header {
   height: 100%;
-  position: relative;
-}
-
-.header::after {
-  content: "";
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  width: 100%;
-  height: 70px;
-  border: 70px solid transparent;
-  border-bottom: 0px solid transparent;
-  border-left: 0px solid transparent;
-  border-right: 1440px solid #ffffff;
-  z-index: 1;
 }
 
 .no-webp .header__fullscreen-body {
@@ -597,7 +582,20 @@ template {
 
 .header__hero {
   color: #ffffff;
-  position: relative;
+  min-height: 100%;
+}
+
+.header__hero::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 70px;
+  border: 70px solid transparent;
+  border-bottom: 0px solid transparent;
+  border-left: 0px solid transparent;
+  border-right: 1440px solid #ffffff;
 }
 
 .header__hero-content-wrapper {
@@ -624,7 +622,7 @@ template {
 }
 
 .header__hero-title-number {
-  font-size: calc(40px + 100 * ((100vw - 320px) / (1440 - 320)));
+  font-size: 140px;
   line-height: 100%;
   color: rgba(255, 255, 255, 0.13);
   padding-right: 25px;
@@ -849,7 +847,7 @@ body {
 
 h1 {
   font-family: "Montserrat", sans-serif;
-  font-size: calc(30px + 20 * ((100vw - 320px) / (1440 - 320)));
+  font-size: 50px;
   line-height: 150%;
   font-weight: 400;
   margin: 0;
