--- a/#src/scss/features.scss
+++ b/#src/scss/features.scss
@@ -2,6 +2,13 @@
     background-color: #233142;
     padding: 80px 0 140px;
 
+    @media (max-width: 1140px) {
+        padding: 40px 0 80px;
+    }
+    @media (max-width: 576px) {
+        padding: 20px 0 50px;
+    }
+
     // .features__wrapper
     &__wrapper {
         display: flex;
@@ -13,10 +20,10 @@
         @media (max-width: 1280px) {
             justify-content: center;
         }
-
         @media (max-width: 775px) {
             flex-direction: column;
             align-items: center;
+            margin: 0;
         }
     }
 
@@ -24,6 +31,10 @@
     &__item {
         display: flex;
         margin: 60px 15px 0;
+
+        @media (max-width: 775px) {
+            margin: 40px 0 0;
+        }
     }
 
     // .features__icon-wrapper
@@ -49,5 +60,12 @@
         line-height: 150%;
         margin-top: 15px;
         width: 300px;
+
+        @media (max-width: 775px) {
+            margin-top: 10px;
+        }
+        @media (max-width: 400px) {
+            width: unset;
+        }
     }
 }
