--- a/#src/scss/how-we-works.scss
+++ b/#src/scss/how-we-works.scss
@@ -2,10 +2,27 @@
     background-color: #ffffff;
     padding: 100px 0;
 
+    @media (max-width: 1140px) {
+        padding: 40px 0 70px;
+    }
+    @media (max-width: 576px) {
+        padding: 30px 0 50px;
+    }
+
     //works__title
     &__title {
         padding-left: 38px;
         border-left: 3px solid $primary-color;
+
+        @media (max-width: 576px) {
+            padding-left: 25px;
+        }
+        @media (max-width: 400px) {
+            padding-left: 15px;
+        }
+        @media (max-width: 576px) {
+            font-size: 35px;
+        }
     }
 
     // .works__wrapper
@@ -19,8 +36,16 @@
     // .works__items-wrapper
     &__items-wrapper {
         display: flex;
+        justify-content: center;
         align-items: center;
         margin-top: 72px;
+
+        @media (max-width: 1140px) {
+            margin-top: 45px;
+        }
+        @media (max-width: 862px) {
+            flex-direction: column;
+        }
     }
 
     // .works__item
@@ -37,6 +62,7 @@
 
     // .works__img
     &__img {
+        width: 100%;
     }
 
     // .works__description
@@ -46,18 +72,46 @@
         line-height: 150%;
         font-weight: 400;
         color: #141d28;
+
+        @media (max-width: 1140px) {
+            font-size: 25px;
+        }
+        @media (max-width: 862px) {
+            font-size: 30px;
+        }
     }
 
     // .works__arrow
     &__arrow {
         margin: 0 50px;
+        display: flex;
+        align-items: flex-end;
+
+        @media (max-width: 1140px) {
+            margin: 0 25px;
+        }
+        @media (max-width: 992px) {
+            flex-basis: 15%;
+            margin: 0 20px;
+        }
+        @media (max-width: 862px) {
+            transform: rotate(90deg);
+            flex-basis: unset;
+            height: 170px;
+        }
 
         &--top-align {
             padding-bottom: 100px;
+
+            @media (max-width: 862px) {
+                padding-bottom: 0;
+                align-items: flex-start;
+            }
         }
     }
 
     // .works__arrow-img
     &__arrow-img {
+        width: 100%;
     }
 }
