--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -50,7 +50,7 @@ body {
   }
 
   @media (max-width: 1280px) {
-    max-width: 1070px;
+    max-width: 1100px;
   }
   @media (max-width: 1140px) {
     max-width: 992px;
@@ -59,10 +59,14 @@ body {
 
 h1 {
   font-family: "Montserrat", sans-serif;
-  font-size: 50px /* calc(25px + 18 * ((100vw - 320px) / (1440 - 320))) */;
+  font-size: calc(20px + 30 * ((100vw - 320px) / (1440 - 320)));
   line-height: 150%;
   font-weight: 400;
   margin: 0;
+
+  @media (min-width: 1441px) {
+    font-size: 50px;
+  }
 }
 
 h2 {
@@ -83,4 +87,45 @@ h3 {
 
 .color-text {
   color: $primary-color;
+}
+.scroll-up-btn {
+  display: none;
+
+  @media (min-width: 993px) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(55, 125, 255, 0.7);
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    text-align: center;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    transition: background-color 0.2s, opacity 0.5s, visibility 0.5s;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 10;
+    cursor: pointer;
+
+    &::after {
+      content: "\f077";
+      font-family: "Font Awesome 5 Free";
+      font-weight: 700;
+      font-style: normal;
+      font-size: 20px;
+      color: #ffffff;
+    }
+    &:hover,
+    &:focus,
+    &:active {
+      background-color: rgba(55, 125, 255, 0.95);
+    }
+
+    &.active {
+      opacity: 1;
+      visibility: visible;
+    }
+  }
 }
