--- a/#src/scss/features.scss
+++ b/#src/scss/features.scss
@@ -1,5 +1,5 @@
 .features {
-    background-color: #233142;
+    background-color: $secondary-color;
     padding: 80px 0 140px;
 
     @media (max-width: 1140px) {
