--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -9,6 +9,7 @@
 }
 /* variables */
 $primary-color: #377dff;
+$secondary-color: #233142;
 $transition: 0.2s;
 
 /* /variables */
@@ -18,6 +19,8 @@ $transition: 0.2s;
 @import "header";
 @import "how-we-works";
 @import "features";
+@import "workers";
+@import "reasons";
 
 *,
 *::before,
@@ -74,7 +77,20 @@ h2 {
   font-size: 38px;
   line-height: 150%;
   font-weight: 600;
+  color: #141d28;
   margin: 0;
+  padding-left: 38px;
+  border-left: 3px solid $primary-color;
+
+  @media (max-width: 576px) {
+    padding-left: 25px;
+  }
+  @media (max-width: 400px) {
+    padding-left: 15px;
+  }
+  @media (max-width: 576px) {
+    font-size: 35px;
+  }
 }
 
 h3 {
@@ -88,6 +104,18 @@ h3 {
 .color-text {
   color: $primary-color;
 }
+
+.unbold-text {
+  font-weight: 400;
+}
+
+.social-icons {
+  font-size: 15px;
+  color: #ffffff;
+  padding: 5px;
+  transition: $transition;
+}
+
 .scroll-up-btn {
   display: none;
 
