--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -21,6 +21,9 @@ $transition: 0.2s;
 @import "features";
 @import "workers";
 @import "reasons";
+@import "gallery";
+@import "swiper-bundle.min";
+@import "testimonials";
 
 *,
 *::before,
@@ -39,6 +42,15 @@ body {
   font-weight: 400;
   background-color: #e5e5e5;
   margin: 0 auto;
+
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
 }
 
 .container {
